--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,8 @@
   .navBtn {
     @apply hidden h-6 cursor-pointer transition-all duration-150 ease-out hover:scale-125 md:inline-flex;
   }
+
+  .actionBtn {
+    @apply h-7 cursor-pointer transition-all duration-150 ease-out hover:scale-125;
+  }
 }
